--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@opentok/client": "^2.21.6",
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2"
